# paintress

./: .dockerignore  .gitignore  .prettierrc  Dockerfile  LICENSE  LICENSE.md  README.md  docker-compose.dev.yml  docker-compose.external.yml  docker-compose.sqlite.dev.yml  docker-compose.sqlite.yml  docker-compose.yml  env.template  nx.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: docker-build.yml  sync-plugin-release.yml
apps/caramel-server/: db.sqlite  package.json
apps/paintress/: index.html  package.json  project.json  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/paintress-e2e/: package.json  playwright.config.ts
apps/paintress-server/: dockerfile  package.json
apps/paintress-server/src/: index.ts
libs/paintress-plugin-types/: README.md  package.json  vite.config.ts
libs/paintress-ui/: README.md  package.json  project.json  tsconfig.lib.json  vite.config.ts
paintress-server/: .env.example  README.md  alembic.ini  init.sql  main.py  pyproject.toml
paintress-server/app/: __init__.py  auth.py  clerk_auth.py  config.py  database.py  dependencies.py  google_auth.py  models.py  schemas.py  storage.py
paintress-server/app/routers/: auth.py  config.py
paintress-server/migrations/: env.py
paintress-server/migrations/versions/: 7b9ef4f516ae_add_clerk_id_to_users_table.py  92f57854037d_initial_migration.py
paintress-server/static/: index.html
paintress-web-app/: index.html  package.json  vite.config.ts
paintress-web-app/dev-dist/: sw.js
paintress-web-app/src/: editor.css  index.css  main.tsx
(+127 files in other folders)
